--- a/tp7/tp7.html
+++ b/tp7/tp7.html
@@ -44,3 +44,13 @@
     </footer>
 </body>
 </html>
+
+
+Para hacer el trabajo practico, me ayude de la IA de Moskitutor, le indique los pasos para crear mi web y yo fui agregando la informacion acerca del contenido de mi pagina.
+Le pedi el uso de boxmodel y etiquetas semanticas, que me diseñara el formulario de contacto, explicacoin de las etiquetas que usaba y como estas funcionaban.
+al final le pedi informacion acerca de la importancia del uso de boxmodel y etiquetas semanticas en el desarrollo de paginas web.
+Me dio las siguientes respuestas.
+
+El Box Model es esencial para controlar la estructura y el diseño de los elementos en una página web, definiendo márgenes, bordes, rellenos y contenido.
+
+Las etiquetas semánticas organizan el contenido con significado, mejorando la accesibilidad, el SEO y la legibilidad del código. Ambos son clave para crear sitios web funcionales, atractivos y bien estructurados.
